     being opened
   * Handle filter took a while to start up
   * Forgot to add sorting for Private WS, Shared WS and Shareable WS
   * dbghelp warnings were not being shown the first time process 
     properties opened
   * Random file-object-related BSODs
   * Increased PID limit in Hidden Processes to 65536
   * Inaccurate I/O Total rates when using a refresh interval other than 
     1000ms

1.3.7.1
 * NEW:
   * "-nokph" command line switch to disable KProcessHacker
 * FIXED:
   * #2779558 - "TreeViewAdv font cannot be initialized"
   * KProcessHacker BSOD on some Vista systems
   * Minor issue where new handle providers in the process window would 
     not be added to the shared thread provider

1.3.7.0
 * NEW/IMPROVED:
   * Terminating processes and threads now bypasses all but the most 
     advanced anti-termination methods
   * Better hidden processes scanner (similar to Blacklight's and IceSword's) 
     which can now detect both Hacker Defender and FU.
   * Basic support for Windows 7 in Process Hacker and KProcessHacker
   * Proper symbol support with dbghelp.dll
   * Private, Shared and Shareable Working Set columns
   * Improved handle viewing with KProcessHacker - more object types are visible, 
     including ALPC Ports and protected process handles
   * Stack viewing uses KProcessHacker on Windows Vista
   * Handle highlighting
   * Lists now have column sorting priority
   * Memory list is much faster
   * Better thread start addresses, especially on Windows XP
   * Job termination
   * Elevation button in Options now spawns a child options window instead of 
     restarting Process Hacker elevated
   * Can open process properties from the handle list
   * Better "could not initialize configuration" message for Windows Vista
   * New Terminator method: assigns a job object to the process and terminates it
   * Process Properties menu item in the handle filter window
   * Can now close multiple handles at once from the handle filter window